--- a/README.textile
+++ b/README.textile
@@ -1,6 +1,31 @@
-h2. the zanox gem
+h2. zanox
+by Krispin Schulz
 
-The ruby way to use the zanox API.
+The zanox gem is the ruby way to use the zanox API.
+It is a coherent wrapper for the zanox Publisher web services and you can use resources like 
+models in ActiveRecord.
+
+h3. Getting started
+* Install the gem
+* Learn its usage with the examples below
+* Create shiny ruby apps with it
+
+h3. Examples
+
+<code>
+
+require 'rubygems'
+require 'zanox'
+
+# first authenticate with your zanox connect id
+Zanox::API.authenticate('26EE1314AEA84BB7C9FC')
+
+# request products as easy as hell
+Zanox::Product.find('ipod').each do |product|
+  puts product.id + " : " + product.name
+end
+
+</code>
 
 
 
